# form_wizard

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: test_and_deploy.yaml
docker/: Dockerfile  Dockerfile_base
src/: main.py
src/audio_converter/: converter.py
src/configs/: config.py  db.py  log_config.py
src/database/: add_template.py  create_tables.py
src/handlers/: start.py
src/handlers/schems/: functions.py
src/handlers/services/: files.py  initial_template_preparation.py  voice_to_text.py
src/handlers/services/templates/: get_templates.py
src/llm_agents/: giga.py
src/schems/: functions.py
src/services/: constants.py  voice_to_text.py
src/services/audio_converter/: converter.py
src/services/templates/: initial_template_preparation.py
src/tg_bot/: main.py
tests/: conftest.py  fake_test.py  test_api.py
