[project]
name = "form-wizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "gigachat>=0.1.39.post1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-docx>=1.1.2",
    "speechrecognition>=3.14.3",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
ensure_newline_before_comments = true
wrap_length = 80
line_length = 120
